# Sentinel-Shield

./: .dockerignore  .env.example  .env.example.production  .gitignore  BUYER_FAQ.md  DATA_PROCESSING.md  DOCS.md  Dockerfile.backend  Dockerfile.frontend  PRIVACY.md  README.md  RELEASE.md  RELEASE_NOTES_v2.1.md  SECURITY.md  START_HERE.md  SUBMISSION_CHECKLIST.md  Sentinel_Shield_Start.command  THREAT_MODEL.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.json  render_start.sh  requirements.txt  sentinel.db  sentinel.shield.plist  setup.sh  shield.bat  shield.sh  smoke_test.py  start.bat  start.sh  stealth_vault_guide.md  technical_security_architecture.md  vault_demo.py  vercel.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
backend/: __init__.py  api_shield.py  app.py  config.py  gunicorn_conf.py  license_middleware.py  license_server.py  license_validator.py  llm_guardian.py  prompt_injection.py  redaction_middleware.py  requirements.txt  risk_engine.py  security_scanner.py  semantic_dlp.py  sentinel_check.py  sentinel_monitor.py  tray_manager.py  universal_proxy.py  vault_crypto.py
code/: README.md
docs/: ACQUIRE_LISTING_COPY.md  API_INTEGRATION_EXAMPLES.md  BUYER_REPLIES.md  COMPLIANCE_MAPPING.md  CROSS_PLATFORM_ARCHITECTURE.md  HA_RUNBOOK.md  HOMEPAGE_COPY.md  KNOWN_LIMITATIONS.md  RED_TEAM_TEST_PACK.md  SYSTEM_SNAPSHOT.md  TIER3_SELF_HEALING.md  buyer_pitch_deck.html
evidence/: README.md  buyer_verification_100.json  evidence_pdf_certificate.json
extension/: content.js  (+2 more)
(+137 files in other folders)
