[package]
name = "sovereign-shield-desktop"
version = "0.1.0"
description = "Sovereign Shield secure operator console"
authors = ["Xavira Tech Labs"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
